2006-03-01  Vlad Seryakov  <seryakov@users.sf.net>

	* nsd/driver.c:
	* tests/http.test:
	* tests/test.nscfg
	* tests/testserver/modules/testhttp.tcl: Fixed error reporting during
	request parsing, now server returns 414/400 return codes and honors
	maxinput/maxheaders parameters. Test http-4.5 does not hang actually 
	but with sndbuf/rcvbug set to so small values it takes very logn time to
	read the request, by putting Ns_Log in SockRead i was seeing reading by
	64/192 bytes but the server was operational.

2006-02-28  Stephen Deasey  <sdeasey@users.sf.net>

	* tests/encoding.test: Add test which exposes off by 1 bug in
	encoding buffer management reported by Vlad on the 24th.

	* nsd/driver.c:
	* tests/test.nscfg:
	* tests/http.test:
	* tests/tclresp.test:
	* tests/testserver/modules/testhttp.tcl:
	* tests/testserver/pages/2048bytes: Add some test which verify
	basic HTTP read/write opperations and limits.  Highlights some
	bugs...

2006-02-28  Vlad Seryakov  <seryakov@users.sf.net>

	* tcl/http.tcl: Added simple http proxy, disabled by default
	* include/ns.h:
	* nsd/tclcmds.c:
	* nsd/tclrequest.c: Add ns_register_proxy Tcl command and make
	Ns_RegisterProxyRequest public API

2006-02-27  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* nsd/init.tcl: reverted change to way global modules are
	loaded, as this was A Bad Thing.

2006-02-27  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/connio.c (Ns_ConnSend):
	* tests/tclresp.test: Fix bug with buffer management triggered by
	data too large to be sent in a single call to the OS. Don't copy
	unsent iovec's around if there are no additional ones to be added
	to the set.

2006-02-25  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/dns.c: Untabify and reformat.

2006-02-25  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>

	* tcl/ttrace.tcl: added implicit support for XOTcl 1.3
	and modified [load] tracer to load packages which were
	not traced.

	* nsd/init.tcl: global modules loaded before per-server